# libplyxx

./: .gitignore  CMakeLists.txt  README.md  changelog.md  config.h.in
libply++/: libply++.cpp  libply++.h  libplyxx_internal.h  textio.h
libplyxx/: libplyxx.cpp  libplyxx.h  libplyxx_internal.h  textio.h
test/: test.cpp
test/data/: test.ply  test_bin.ply
visualstudio/: libply++.sln  libply++.vcxproj  libply++.vcxproj.filters
